# AdventOfCode2021Rust

./: Cargo.toml  README.md
day1/: problem.txt
day1/sonar_sweep/: main.rs
day1/sonar_window/: main.rs
day10/: problem.txt
day10/character_completion/: main.rs
day10/wrong_character_parsing/: main.rs
day11/: problem.txt
day11/octopus_flash_count/: main.rs
day11/octopus_flash_sync/: main.rs
day12/: problem.txt
day12/path_count/: main.rs
day12/path_count_repeat/: main.rs
day13/: problem.txt
day13/origami_first_fold/: main.rs
day13/origami_fold/: main.rs
day14/: problem.txt
day14/polymer_element_big_min_max/: main.rs
day14/polymer_element_min_max/: main.rs
day15/: problem.txt
day15/chiton_lowest_risk_big_path/: main.rs
day15/chiton_lowest_risk_path/: main.rs
day16/: problem.txt
day16/packet_solve/: main.rs
day16/packet_version_addition/: main.rs
day17/: problem.txt
day17/probe_launch_height/: main.rs
day17/probe_on_target/: main.rs
day18/snailfish_magnitude/: main.rs
day2/: problem.txt
day2/dive_aim/: main.rs
day2/dive_position/: main.rs
day24/alu_largest_model_number/: main.rs
day25/cucumber_stop/: main.rs
day3/: problem.txt
day3/life_support/: main.rs
day3/power_consumption/: main.rs
day4/: problem.txt
day4/squid_bingo/: main.rs
day4/squid_bingo_loss/: main.rs
day5/: problem.txt
day5/hydrothermal_diag_overlap/: main.rs
day5/hydrothermal_line_overlap/: main.rs
day6/: problem.txt
day6/lanternfish_big_growth/: main.rs
day6/lanternfish_growth/: main.rs
day7/: problem.txt
day7/crab_fuel_position/: main.rs
day7/crab_weighted_fuel_position/: main.rs
day8/: problem.txt
day8/segment_full_sum/: main.rs
day8/segment_simple_nums/: main.rs
day9/: problem.txt
day9/smoke_basins/: main.rs
day9/smoke_local_mins/: main.rs
