[package]
name = "lvoytek_advent_of_code_2021"
version = "5.1.0"
authors = ["Lena Voytek"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]



[[bin]]
name = "sonar_sweep"
path = "day1/sonar_sweep/main.rs"

[[bin]]
name = "sonar_window"
path = "day1/sonar_window/main.rs"

[[bin]]
name = "dive_position"
path = "day2/dive_position/main.rs"

[[bin]]
name = "dive_aim"
path = "day2/dive_aim/main.rs"

[[bin]]
name = "power_consumption"
path = "day3/power_consumption/main.rs"

[[bin]]
name = "life_support"
path = "day3/life_support/main.rs"

[[bin]]
name = "squid_bingo"
path = "day4/squid_bingo/main.rs"

[[bin]]
name = "squid_bingo_loss"
path = "day4/squid_bingo_loss/main.rs"

[[bin]]
name = "hydrothermal_line_overlap"
path = "day5/hydrothermal_line_overlap/main.rs"

[[bin]]
name = "hydrothermal_diag_overlap"
path = "day5/hydrothermal_diag_overlap/main.rs"
