[package]
name = "lvoytek_advent_of_code_2021"
version = "16.0.0"
authors = ["Lena Voytek"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]



[[bin]]
name = "sonar_sweep"
path = "day1/sonar_sweep/main.rs"

[[bin]]
name = "sonar_window"
path = "day1/sonar_window/main.rs"

[[bin]]
name = "dive_position"
path = "day2/dive_position/main.rs"

[[bin]]
name = "dive_aim"
path = "day2/dive_aim/main.rs"

[[bin]]
name = "power_consumption"
path = "day3/power_consumption/main.rs"

[[bin]]
name = "life_support"
path = "day3/life_support/main.rs"

[[bin]]
name = "squid_bingo"
path = "day4/squid_bingo/main.rs"

[[bin]]
name = "squid_bingo_loss"
path = "day4/squid_bingo_loss/main.rs"

[[bin]]
name = "hydrothermal_line_overlap"
path = "day5/hydrothermal_line_overlap/main.rs"

[[bin]]
name = "hydrothermal_diag_overlap"
path = "day5/hydrothermal_diag_overlap/main.rs"

[[bin]]
name = "lanternfish_growth"
path = "day6/lanternfish_growth/main.rs"

[[bin]]
name = "lanternfish_big_growth"
path = "day6/lanternfish_big_growth/main.rs"

[[bin]]
name = "crab_fuel_position"
path = "day7/crab_fuel_position/main.rs"

[[bin]]
name = "crab_weighted_fuel_position"
path = "day7/crab_weighted_fuel_position/main.rs"

[[bin]]
name = "segment_simple_nums"
path = "day8/segment_simple_nums/main.rs"

[[bin]]
name = "segment_full_sum"
path = "day8/segment_full_sum/main.rs"

[[bin]]
name = "smoke_local_mins"
path = "day9/smoke_local_mins/main.rs"

[[bin]]
name = "smoke_basins"
path = "day9/smoke_basins/main.rs"

[[bin]]
name = "wrong_character_parsing"
path = "day10/wrong_character_parsing/main.rs"

[[bin]]
name = "character_completion"
path = "day10/character_completion/main.rs"

[[bin]]
name = "octopus_flash_count"
path = "day11/octopus_flash_count/main.rs"

[[bin]]
name = "octopus_flash_sync"
path = "day11/octopus_flash_sync/main.rs"

[[bin]]
name = "path_count"
path = "day12/path_count/main.rs"

[[bin]]
name = "path_count_repeat"
path = "day12/path_count_repeat/main.rs"

[[bin]]
name = "origami_first_fold"
path = "day13/origami_first_fold/main.rs"

[[bin]]
name = "origami_fold"
path = "day13/origami_fold/main.rs"

[[bin]]
name = "polymer_element_min_max"
path = "day14/polymer_element_min_max/main.rs"

[[bin]]
name = "polymer_element_big_min_max"
path = "day14/polymer_element_big_min_max/main.rs"

[[bin]]
name = "chiton_lowest_risk_path"
path = "day15/chiton_lowest_risk_path/main.rs"

[[bin]]
name = "chiton_lowest_risk_big_path"
path = "day15/chiton_lowest_risk_big_path/main.rs"

[[bin]]
name = "packet_version_addition"
path = "day16/packet_version_addition/main.rs"
